--- a/client/assets/scss/main.scss
+++ b/client/assets/scss/main.scss
@@ -12,3 +12,10 @@
   -moz-tab-size: 4;
   tab-size: 4;
 }
+
+.pet-image {
+  width: 40%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
